src/dartcv/core/types.h

typedef unsigned char uchar;
typedef unsigned short ushort;
// Wrapper for an individual cv::Point2f
typedef struct CvPoint2f {
    float x;
    float y;
} CvPoint2f;
typedef struct CvSize2f {
    float width;
    float height;
} CvSize2f;
// Wrapper for an individual cv::RotatedRect
typedef struct RotatedRect {
    CvPoint2f center;
    CvSize2f size;
    float angle;
} RotatedRect;
// Wrapper for an individual cv::Scalar
typedef struct Scalar {
    double val1;
    double val2;
    double val3;
    double val4;
} Scalar;
// Wrapper for an individual cv::Moment
typedef struct Moment {
    double m00;
    double m10;
    double m01;
    double m20;
    double m11;
    double m02;
    double m30;
    double m21;
    double m12;
    double m03;

    double mu20;
    double mu11;
    double mu02;
    double mu30;
    double mu21;
    double mu12;
    double mu03;

    double nu20;
    double nu11;
    double nu02;
    double nu30;
    double nu21;
    double nu12;
    double nu03;
} Moment;
typedef struct Vec2b {
    uchar val1;
    uchar val2;
} Vec2b;
typedef struct Vec3b {
    uchar val1;
    uchar val2;
    uchar val3;
} Vec3b;
typedef struct Vec4b {
    uchar val1;
    uchar val2;
    uchar val3;
    uchar val4;
} Vec4b;
typedef struct Vec2s {
    short val1;
    short val2;
} Vec2s;
typedef struct Vec3s {
    short val1;
    short val2;
    short val3;
} Vec3s;
typedef struct Vec4s {
    short val1;
    short val2;
    short val3;
    short val4;
} Vec4s;
typedef struct Vec2w {
    ushort val1;
    ushort val2;
} Vec2w;
typedef struct Vec3w {
    ushort val1;
    ushort val2;
    ushort val3;
} Vec3w;
typedef struct Vec4w {
    ushort val1;
    ushort val2;
    ushort val3;
    ushort val4;
} Vec4w;
typedef struct Vec2i {
    int val1;
    int val2;
} Vec2i;
typedef struct Vec3i {
    int val1;
    int val2;
    int val3;
} Vec3i;
typedef struct Vec4i {
    int val1;
    int val2;
    int val3;
    int val4;
} Vec4i;
typedef struct Vec2f {
    float val1;
    float val2;
} Vec2f;
typedef struct Vec3f {
    float val1;
    float val2;
    float val3;
} Vec3f;
typedef struct Vec4f {
    float val1;
    float val2;
    float val3;
    float val4;
} Vec4f;
typedef struct Vec2d {
    double val1;
    double val2;
} Vec2d;
typedef struct Vec3d {
    double val1;
    double val2;
    double val3;
} Vec3d;
typedef struct Vec4d {
    double val1;
    double val2;
    double val3;
    double val4;
} Vec4d;
typedef struct TermCriteria {
    int type;
    int maxCount;
    double epsilon;
} TermCriteria;
typedef struct UsacParams {
    double confidence;
    bool isParallel;
    int loIterations;
    int loMethod;
    int loSampleSize;
    int maxIterations;
    int neighborsSearch;
    int randomGeneratorState;
    int sampler;
    int score;
    double threshold;
    int final_polisher;
    int final_polisher_iterations;
} UsacParams;