packages/dartcv/lib/src/g/types.g.dart


  @ffi.Double()
  external double mu12;

  @ffi.Double()
  external double mu03;

  @ffi.Double()
  external double nu20;

  @ffi.Double()
  external double nu11;

  @ffi.Double()
  external double nu02;

  @ffi.Double()
  external double nu30;

  @ffi.Double()
  external double nu21;

  @ffi.Double()
  external double nu12;

  @ffi.Double()
  external double nu03;

  static ffi.Pointer<Moment> $allocate(
    ffi.Allocator $allocator, {
    required double m00,
    required double m10,
    required double m01,
    required double m20,
    required double m11,
    required double m02,
    required double m30,
    required double m21,
    required double m12,
    required double m03,
    required double mu20,
    required double mu11,
    required double mu02,
    required double mu30,
    required double mu21,
    required double mu12,
    required double mu03,
    required double nu20,
    required double nu11,
    required double nu02,
    required double nu30,
    required double nu21,
    required double nu12,
    required double nu03,
  }) => $allocator<Moment>()
    ..ref.m00 = m00
    ..ref.m10 = m10
    ..ref.m01 = m01
    ..ref.m20 = m20
    ..ref.m11 = m11
    ..ref.m02 = m02
    ..ref.m30 = m30
    ..ref.m21 = m21
    ..ref.m12 = m12
    ..ref.m03 = m03
    ..ref.mu20 = mu20
    ..ref.mu11 = mu11
    ..ref.mu02 = mu02
    ..ref.mu30 = mu30
    ..ref.mu21 = mu21
    ..ref.mu12 = mu12
    ..ref.mu03 = mu03
    ..ref.nu20 = nu20
    ..ref.nu11 = nu11
    ..ref.nu02 = nu02
    ..ref.nu30 = nu30
    ..ref.nu21 = nu21
    ..ref.nu12 = nu12
    ..ref.nu03 = nu03;
}

final class RNG extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;

  static ffi.Pointer<RNG> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> ptr,
  }) => $allocator<RNG>()..ref.ptr = ptr;
}

typedef RNGPtr = ffi.Pointer<RNG>;

final class RotatedRect extends ffi.Struct {
  external CvPoint2f center;

  external CvSize2f size;

  @ffi.Float()
  external double angle;
}

final class Scalar extends ffi.Struct {
  @ffi.Double()
  external double val1;

  @ffi.Double()
  external double val2;

  @ffi.Double()
  external double val3;

  @ffi.Double()
  external double val4;

  static ffi.Pointer<Scalar> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
    required double val3,
    required double val4,
  }) => $allocator<Scalar>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}

final class TermCriteria extends ffi.Struct {
  @ffi.Int()
  external int type;

  @ffi.Int()
  external int maxCount;

  @ffi.Double()
  external double epsilon;

  static ffi.Pointer<TermCriteria> $allocate(
    ffi.Allocator $allocator, {
    required int type,
    required int maxCount,
    required double epsilon,
  }) => $allocator<TermCriteria>()
    ..ref.type = type
    ..ref.maxCount = maxCount
    ..ref.epsilon = epsilon;
}

final class UMat extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;

  static ffi.Pointer<UMat> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> ptr,
  }) => $allocator<UMat>()..ref.ptr = ptr;
}

typedef UMatPtr = ffi.Pointer<UMat>;

final class UsacParams extends ffi.Struct {
  @ffi.Double()
  external double confidence;

  @ffi.Bool()
  external bool isParallel;

  @ffi.Int()
  external int loIterations;

  @ffi.Int()
  external int loMethod;

  @ffi.Int()
  external int loSampleSize;

  @ffi.Int()
  external int maxIterations;

  @ffi.Int()
  external int neighborsSearch;

  @ffi.Int()
  external int randomGeneratorState;

  @ffi.Int()
  external int sampler;

  @ffi.Int()
  external int score;

  @ffi.Double()
  external double threshold;

  @ffi.Int()
  external int final_polisher;

  @ffi.Int()
  external int final_polisher_iterations;

  static ffi.Pointer<UsacParams> $allocate(
    ffi.Allocator $allocator, {
    required double confidence,
    required bool isParallel,
    required int loIterations,
    required int loMethod,
    required int loSampleSize,
    required int maxIterations,
    required int neighborsSearch,
    required int randomGeneratorState,
    required int sampler,
    required int score,
    required double threshold,
    required int final_polisher,
    required int final_polisher_iterations,
  }) => $allocator<UsacParams>()
    ..ref.confidence = confidence
    ..ref.isParallel = isParallel
    ..ref.loIterations = loIterations
    ..ref.loMethod = loMethod
    ..ref.loSampleSize = loSampleSize
    ..ref.maxIterations = maxIterations
    ..ref.neighborsSearch = neighborsSearch
    ..ref.randomGeneratorState = randomGeneratorState
    ..ref.sampler = sampler
    ..ref.score = score
    ..ref.threshold = threshold
    ..ref.final_polisher = final_polisher
    ..ref.final_polisher_iterations = final_polisher_iterations;
}

final class Vec2b extends ffi.Struct {
  @ffi.UnsignedChar()
  external int val1;

  @ffi.UnsignedChar()
  external int val2;

  static ffi.Pointer<Vec2b> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
  }) => $allocator<Vec2b>()
    ..ref.val1 = val1
    ..ref.val2 = val2;
}

final class Vec2d extends ffi.Struct {
  @ffi.Double()
  external double val1;

  @ffi.Double()
  external double val2;

  static ffi.Pointer<Vec2d> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
  }) => $allocator<Vec2d>()
    ..ref.val1 = val1
    ..ref.val2 = val2;
}

final class Vec2f extends ffi.Struct {
  @ffi.Float()
  external double val1;

  @ffi.Float()
  external double val2;

  static ffi.Pointer<Vec2f> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
  }) => $allocator<Vec2f>()
    ..ref.val1 = val1
    ..ref.val2 = val2;
}

final class Vec2i extends ffi.Struct {
  @ffi.Int()
  external int val1;

  @ffi.Int()
  external int val2;

  static ffi.Pointer<Vec2i> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
  }) => $allocator<Vec2i>()
    ..ref.val1 = val1
    ..ref.val2 = val2;
}

final class Vec2s extends ffi.Struct {
  @ffi.Short()
  external int val1;

  @ffi.Short()
  external int val2;

  static ffi.Pointer<Vec2s> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
  }) => $allocator<Vec2s>()
    ..ref.val1 = val1
    ..ref.val2 = val2;
}

final class Vec2w extends ffi.Struct {
  @ushort()
  external int val1;

  @ushort()
  external int val2;

  static ffi.Pointer<Vec2w> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
  }) => $allocator<Vec2w>()
    ..ref.val1 = val1
    ..ref.val2 = val2;
}

final class Vec3b extends ffi.Struct {
  @ffi.UnsignedChar()
  external int val1;

  @ffi.UnsignedChar()
  external int val2;

  @ffi.UnsignedChar()
  external int val3;

  static ffi.Pointer<Vec3b> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
  }) => $allocator<Vec3b>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3;
}

final class Vec3d extends ffi.Struct {
  @ffi.Double()
  external double val1;

  @ffi.Double()
  external double val2;

  @ffi.Double()
  external double val3;

  static ffi.Pointer<Vec3d> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
    required double val3,
  }) => $allocator<Vec3d>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3;
}

final class Vec3f extends ffi.Struct {
  @ffi.Float()
  external double val1;

  @ffi.Float()
  external double val2;

  @ffi.Float()
  external double val3;

  static ffi.Pointer<Vec3f> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
    required double val3,
  }) => $allocator<Vec3f>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3;
}

final class Vec3i extends ffi.Struct {
  @ffi.Int()
  external int val1;

  @ffi.Int()
  external int val2;

  @ffi.Int()
  external int val3;

  static ffi.Pointer<Vec3i> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
  }) => $allocator<Vec3i>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3;
}

final class Vec3s extends ffi.Struct {
  @ffi.Short()
  external int val1;

  @ffi.Short()
  external int val2;

  @ffi.Short()
  external int val3;

  static ffi.Pointer<Vec3s> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
  }) => $allocator<Vec3s>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3;
}

final class Vec3w extends ffi.Struct {
  @ushort()
  external int val1;

  @ushort()
  external int val2;

  @ushort()
  external int val3;

  static ffi.Pointer<Vec3w> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
  }) => $allocator<Vec3w>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3;
}

final class Vec4b extends ffi.Struct {
  @ffi.UnsignedChar()
  external int val1;

  @ffi.UnsignedChar()
  external int val2;

  @ffi.UnsignedChar()
  external int val3;

  @ffi.UnsignedChar()
  external int val4;

  static ffi.Pointer<Vec4b> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
    required int val4,
  }) => $allocator<Vec4b>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}

final class Vec4d extends ffi.Struct {
  @ffi.Double()
  external double val1;

  @ffi.Double()
  external double val2;

  @ffi.Double()
  external double val3;

  @ffi.Double()
  external double val4;

  static ffi.Pointer<Vec4d> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
    required double val3,
    required double val4,
  }) => $allocator<Vec4d>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}

final class Vec4f extends ffi.Struct {
  @ffi.Float()
  external double val1;

  @ffi.Float()
  external double val2;

  @ffi.Float()
  external double val3;

  @ffi.Float()
  external double val4;

  static ffi.Pointer<Vec4f> $allocate(
    ffi.Allocator $allocator, {
    required double val1,
    required double val2,
    required double val3,
    required double val4,
  }) => $allocator<Vec4f>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}

final class Vec4i extends ffi.Struct {
  @ffi.Int()
  external int val1;

  @ffi.Int()
  external int val2;

  @ffi.Int()
  external int val3;

  @ffi.Int()
  external int val4;

  static ffi.Pointer<Vec4i> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
    required int val4,
  }) => $allocator<Vec4i>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}

final class Vec4s extends ffi.Struct {
  @ffi.Short()
  external int val1;

  @ffi.Short()
  external int val2;

  @ffi.Short()
  external int val3;

  @ffi.Short()
  external int val4;

  static ffi.Pointer<Vec4s> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
    required int val4,
  }) => $allocator<Vec4s>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}

final class Vec4w extends ffi.Struct {
  @ushort()
  external int val1;

  @ushort()
  external int val2;

  @ushort()
  external int val3;

  @ushort()
  external int val4;

  static ffi.Pointer<Vec4w> $allocate(
    ffi.Allocator $allocator, {
    required int val1,
    required int val2,
    required int val3,
    required int val4,
  }) => $allocator<Vec4w>()
    ..ref.val1 = val1
    ..ref.val2 = val2
    ..ref.val3 = val3
    ..ref.val4 = val4;
}
